# authlib_linux

./: CMakeLists.txt  README.md  main.c
auth/: CMakeLists.txt  library.h
auth/hal/: auth_hal_if.c  auth_hal_if.h
auth/include/: auth_xport.h
auth/src/: auth_chalresp.c  auth_dtls.c  auth_internal.h  auth_lib.c  auth_logger.c  auth_logger.h  auth_xport_common.c  auth_xport_udp.c
auth/tinycrypt/tests/: test_aes  test_cbc_mode  test_ccm_mode  test_cmac_mode  test_ctr_mode  test_ctr_prng
include/: auth_config.h  auth_lib.h
